# mtg-mcp-server

./: .gitignore  CLAUDE.md  COMMAND_ZONE_TEMPLATE.md  LICENSE  README.md  REFACTORING_PLAN.md  config.py  example_deck.txt  pyproject.toml  server.py  test_client.py  utils.py
.claude/: settings.local.json
.github/workflows/: ci.yml
tests/: __init__.py  conftest.py  test_analysis_server.py  test_commander_analysis.py  test_integration.py  test_scryfall_server.py  test_server_integration.py  test_validation.py
tools/: __init__.py  analysis_resources.py  analysis_server.py  basic_analysis.py  color_analysis.py  commander_analysis.py  lookup_server.py  scryfall_server.py  utils.py  validation.py
