[project]
name = "mtg-mcp-server"
version = "0.1.0"
description = "An MCP server to help LLM's better understand a deck list make recommendations."
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["fastmcp>=2.8.1"]

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "ruff>=0.12.0",
]
