[project]
name = "mtg-mcp-server"
version = "0.1.0"
description = "An MCP server to help LLM's better understand a deck list make recommendations."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.9.0",
]

[dependency-groups]
dev = ["mypy>=1.16.1", "ruff>=0.12.0", "pytest>=8.0.0", "pytest-asyncio>=0.24.0", "httpx>=0.27.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
